--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "tsc",
-    "concat": "node ./scripts/join-files.js"
+    "build": "npm run build:compile && npm run build:concat",
+    "build:compile": "tsc",
+    "build:concat": "node scripts/joinFilesWithSourceMaps.js"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "concat-with-sourcemaps": "^1.1.0",
+    "merge-source-maps": "^0.6.1",
     "typescript": "^4.3.5"
   }
 }
